--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>share-books</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+    <title>Share Books</title>
+    <link rel="stylesheet" href="/static/semantic.min.css">
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script src="/static/jquery.min.js"></script>
+    <script src="/static/semantic.min.js"></script>
+
+    <script src="/dist/build.js"></script>
+
   </body>
 </html>
