--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/static/jquery.min.js"></script>
+    <script src="/static/jquery-2.2.4.min.js"></script>
     <script src="/static/semantic.min.js"></script>
 
-    <script src="/dist/build.js"></script>
 
   </body>
 </html>
