--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <title>Share Books</title>
-   <!-- <link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">-->
+    <link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
     <link rel="stylesheet" href="/static/semantic.min.css">
   </head>
   <body>
     <div id="app"></div>
-    <script src="/static/jquery-2.2.4.min.js"></script>
+    <script src="/static/jquery.min.js"></script>
     <script src="/static/semantic.min.js"></script>
 
 
